initialze result endpoint
