# docs/swagger.json
@@ -16,6 +16,53 @@
         "version": "1.0"
     },
     "paths": {
+        "/result": {
+            "get": {
+                "description": "Get quiz score and answers (partial or final)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quiz"
+                ],
+                "summary": "Get quiz result",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Quiz attempt ID",
+                        "name": "attempt_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.APIResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/handler.APIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/start": {
             "post": {
                 "description": "Initialize quiz attempt and fetch questions",
